--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "eventmap": "~1.3.13",
-    "udefine": "~0.8.8"
+    "udefine": "~0.8.8",
+    "mixedice": "~0.5.1"
   }
 }
