--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-amd-tamer": "~0.1.7",
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-dependo": "~0.1.1",
-    "grunt-mocha": "~0.4.7"
+    "grunt-mocha": "~0.4.7",
+    "matchdep": "~0.3.0"
   }
 }
