--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-dependo": "~0.1.1",
     "grunt-mocha": "~0.4.7",
-    "matchdep": "~0.3.0"
+    "matchdep": "~0.3.0",
+    "grunt-contrib-clean": "~0.5.0"
   }
 }
