--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "eventmap": "~1.3.13",
     "udefine": "~0.8.8",
-    "mixedice": "~0.5.1"
+    "mixedice": "~0.5.1",
+    "animframe": "~1.1.4"
   }
 }
