--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "url": "https://github.com/freezedev/gameboard/issues"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "~0.7.2",
     "grunt": "~0.4.2",
     "grunt-amd-tamer": "~0.1.7",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-jshint": "~0.7.2",
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-dependo": "~0.1.1",
     "grunt-mocha": "~0.4.7",
+    "load-grunt-config": "^0.13.1",
     "matchdep": "~0.3.0",
-    "grunt-contrib-clean": "~0.5.0"
+    "time-grunt": "^1.0.0"
   }
 }
