--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "eventmap": "~1.3.13",
     "udefine": "~0.8.8",
     "mixedice": "~0.5.1",
-    "animframe": "~1.1.4"
+    "animframe": "~1.1.4",
+    "bezier-easing": "~1.0.0"
   },
   "devDependencies": {
     "mocha": "~1.17.1",
