--- a/bower.json
+++ b/bower.json
@@ -25,10 +25,10 @@
     "eventmap": "~1.3.13",
     "udefine": "~0.8.8",
     "mixedice": "~0.5.1",
-    "animframe": "~1.1.4",
-    "bezier-easing": "~1.0.0"
+    "animframe": "~1.1.4"
   },
   "devDependencies": {
+    "bezier-easing": "~1.0.0",
     "mocha": "~1.17.1",
     "chai": "~1.8.1"
   }
