--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "gameboard",
-  "version": "0.1.0",
+  "version": "0.2.0-alpha1",
   "homepage": "https://github.com/freezedev/gameboard",
   "authors": [
     "Johannes Stein <johannesstein@freeze-dev.com>"
