--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "url": "https://github.com/freezedev/gameboard/issues"
   },
   "devDependencies": {
-    "grunt": "~0.4.2",
+    "grunt": "^0.4.5",
     "grunt-amd-tamer": "~0.1.7",
     "grunt-bowercopy": "^1.1.0",
     "grunt-contrib-clean": "~0.6.0",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-uglify": "~0.6.0",
+    "grunt-contrib-jshint": "^0.11.0",
+    "grunt-contrib-uglify": "^0.7.0",
     "grunt-dependo": "~0.1.1",
     "grunt-mocha": "~0.4.7",
     "jit-grunt": "^0.9.0",
