--- a/package.json
+++ b/package.json
@@ -34,5 +34,10 @@
     "load-grunt-config": "^0.16.0",
     "matchdep": "~0.3.0",
     "time-grunt": "^1.0.0"
+  },
+  "dependencies": {
+    "animframe": "^1.1.5",
+    "eventmap": "^1.5.0",
+    "udefine": "^0.8.9"
   }
 }
