--- a/.jshintrc
+++ b/.jshintrc
@@ -1,6 +1,10 @@
 {
-	"loopfunc": true,
-	"sub": true,
-	"eqnull": true,
-	"expr": true
+  "loopfunc": true,
+  "sub": true,
+  "eqnull": true,
+  "expr": true,
+  "esnext": true,
+  "globalstrict": true,
+  "strict": true,
+  "browser": true
 }
