--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gamebox",
   "version": "0.2.0-alpha9",
   "description": "Base for creating games for the web",
-  "main": "dist/gamebox.js",
+  "main": "dist/common/lib.js",
   "scripts": {
     "test": "grunt test"
   },
@@ -14,7 +14,10 @@
     "game",
     "loop",
     "preloader",
-    "input"
+    "assetloader",
+    "input",
+    "tween",
+    "timer"
   ],
   "author": "Johannes Stein",
   "license": "Public domain",
@@ -24,6 +27,7 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-amd-tamer": "~0.1.7",
+    "grunt-babel": "^4.0.0",
     "grunt-bowercopy": "^1.1.0",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-jshint": "^0.11.0",
@@ -37,7 +41,6 @@
   },
   "dependencies": {
     "animframe": "^1.1.5",
-    "eventmap": "^1.5.0",
-    "udefine": "^0.8.9"
+    "eventmap": "^1.5.0"
   }
 }
