--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gamebox",
   "version": "0.2.0-alpha9",
   "description": "Base for creating games for the web",
-  "main": "dist/common/lib.js",
+  "main": "dist/common/index.js",
   "scripts": {
     "test": "grunt test"
   },
