--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "url": "https://github.com/freezedev/gamebox/issues"
   },
   "devDependencies": {
+    "babel-core": "^4.7.16",
+    "babel-loader": "^4.2.0",
+    "chai": "^2.2.0",
     "grunt": "^0.4.5",
     "grunt-amd-tamer": "~0.1.7",
     "grunt-babel": "^4.0.0",
@@ -33,11 +36,18 @@
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-uglify": "^0.8.0",
     "grunt-dependo": "~0.1.1",
+    "grunt-karma": "^0.10.1",
     "grunt-mocha": "~0.4.7",
     "jit-grunt": "^0.9.0",
+    "karma": "^0.12.31",
+    "karma-chai": "^0.1.0",
+    "karma-mocha": "^0.1.10",
+    "karma-webpack": "^1.5.0",
     "load-grunt-config": "^0.16.0",
     "matchdep": "~0.3.0",
-    "time-grunt": "^1.0.0"
+    "mocha": "^2.2.1",
+    "time-grunt": "^1.0.0",
+    "webpack": "^1.7.3"
   },
   "dependencies": {
     "animframe": "^2.0.0",
