--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "jit-grunt": "^0.9.0",
     "karma": "^0.12.31",
     "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.1.7",
     "karma-mocha": "^0.1.10",
+    "karma-phantomjs-launcher": "^0.1.4",
     "karma-webpack": "^1.5.0",
     "load-grunt-config": "^0.16.0",
     "matchdep": "~0.3.0",
