--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Base for creating games for the web",
   "main": "dist/common/index.js",
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "examples": "webpack-dev-server --config examples/webpack.config.js --content-base examples"
   },
   "repository": {
     "type": "git",
@@ -25,8 +26,8 @@
     "url": "https://github.com/freezedev/gamebox/issues"
   },
   "devDependencies": {
-    "babel-core": "^4.7.16",
-    "babel-loader": "^4.2.0",
+    "babel-core": "^5.2.17",
+    "babel-loader": "^5.0.0",
     "chai": "^2.2.0",
     "grunt": "^0.4.5",
     "grunt-amd-tamer": "~0.1.7",
@@ -49,10 +50,11 @@
     "matchdep": "~0.3.0",
     "mocha": "^2.2.1",
     "time-grunt": "^1.0.0",
-    "webpack": "^1.7.3"
+    "webpack": "^1.8.11"
   },
   "dependencies": {
     "animframe": "^2.0.0",
+    "bezier-easing": "^0.4.5",
     "eventmap": "^1.6.0"
   }
 }
