--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "gamebox",
-  "version": "0.2.0-beta1",
+  "version": "0.2.0",
   "homepage": "https://github.com/freezedev/gamebox",
   "authors": [
     "Johannes Stein <johannesstein@freeze-dev.com>"
