--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gamebox",
-  "version": "0.2.0-beta1",
+  "version": "0.2.0",
   "description": "Base for creating games for the web",
   "main": "dist/common/index.js",
   "scripts": {
